# preview

./: CMakeLists.txt  Config.cpp  Converter.cpp  DeviceManager.cpp  EventLoop.h  InputReader.cpp  README.md  VirtualKeyboard.cpp  easy-switcher-0.5.deb  easy-switcher_0.5_amd64.deb
resources/: changelog  copyright  default.conf.example  easy-switcher.1  easy-switcher.service  postinst  postrm  prerm
src/: Config.h  Converter.cpp  Converter.h  DeviceManager.h  EventLoop.cpp  InputReader.h  VirtualKeyboard.h  main.cpp
